change time from unix to RFC-3339
